--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="60dp"
-                    android:text="欢迎使用金牌电工"
+                    android:text="xxx"
                     android:textColor="@color/text_black"
                     android:textSize="25sp" />
 
@@ -46,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="15dp"
-                    android:text="工作自由 财务自由"
+                    android:text="xxx"
                     android:textColor="#ff999999"
                     android:textSize="16sp" />
 
@@ -61,8 +61,7 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                         />
+                        android:layout_height="wrap_content" />
 
                     <EditText
                         android:layout_width="match_parent"
@@ -102,18 +101,6 @@
                         android:layout_marginLeft="12dp"
                         android:layout_weight="1">
 
-                        <androidx.appcompat.widget.AppCompatEditText
-                            android:id="@+id/et_code"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@color/colorWhite"
-                            android:hint="@string/login_hit_use_code"
-                            android:inputType="number"
-                            android:text="@={viewModel.pass}"
-                            android:textColor="@color/text_black"
-                            android:textColorHint="#FFBBBBBB"
-                            android:textSize="@dimen/sp_14"
-                            android:visibility="@{viewModel.isPassToLogin()?View.GONE:View.VISIBLE}" />
 
                         <androidx.appcompat.widget.AppCompatEditText
                             android:id="@+id/et_pass"
@@ -125,36 +112,9 @@
                             android:text="@={viewModel.pass}"
                             android:textColor="@color/text_black"
                             android:textColorHint="#FFBBBBBB"
-                            android:textSize="@dimen/sp_14"
-                            android:visibility="@{viewModel.isPassToLogin()?View.VISIBLE:View.GONE}"
-                            tools:text="xxx" />
+                            android:textSize="@dimen/sp_14" />
 
                     </FrameLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:visibility="@{viewModel.isPassToLogin?View.GONE:View.VISIBLE}"
-                        tools:visibility="visible">
-
-                        <View
-                            android:layout_width="1px"
-                            android:layout_height="10dp"
-                            android:layout_marginRight="10dp"
-                            android:background="#FFCCCCCC" />
-
-                        <TextView
-                            android:layout_width="80dp"
-                            android:layout_height="match_parent"
-                            android:enabled="@{viewModel.canGetCode}"
-                            android:gravity="center"
-                            android:text="@{viewModel.getCodeText}"
-                            android:textColor="#ffbbbbbb"
-                            android:textSize="14sp"
-                            tools:text="获取验证码" />
-                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -182,17 +142,6 @@
                         android:textSize="12sp"
                         android:visibility="@{viewModel.isPassToLogin?View.VISIBLE:View.GONE}" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:onClick="@{()->viewModel.changeLoginState()}"
-                        android:paddingTop="12dp"
-                        android:paddingBottom="12dp"
-                        android:text="@{viewModel.isPassToLogin()?@string/login_use_code:@string/login_use_pass}"
-                        android:textColor="#ffff9000"
-                        android:textSize="12sp"
-                        tools:text="@string/login_use_code" />
                 </RelativeLayout>
 
 
@@ -207,6 +156,7 @@
                     android:gravity="center"
                     android:onClick="@{() -> viewModel.toLogin()}"
                     android:text="@string/login"
+                    android:textColor="@color/colorWhite"
                     android:textSize="16sp"
                     app:button_disabled_bg="@{@drawable/button_disabled_gray}"
                     app:button_enable="@{viewModel.canClick}"
@@ -219,39 +169,6 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:visibility="invisible">
-
-                    <View
-                        android:layout_width="70dp"
-                        android:layout_height="1px"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="10dp"
-                        android:layout_toLeftOf="@+id/text_1"
-                        android:background="#FFCCCCCC" />
-
-                    <TextView
-                        android:id="@+id/text_1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="其他登录方式"
-                        android:textColor="#ffaaaaaa"
-                        android:textSize="12sp" />
-
-                    <View
-                        android:layout_width="70dp"
-                        android:layout_height="1px"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"
-                        android:layout_toRightOf="@+id/text_1"
-                        android:background="#FFCCCCCC" />
-
-                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
