--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,16 @@
         <item name="enterAnim">@anim/slide_in_right</item>
     </style>
 
+    <style name="AppTheme.NoActionBar.White">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimaryDark">@android:color/white</item>
+        <item name="popEnterAnim">@anim/slide_in_left</item>
+        <item name="popExitAnim">@anim/slide_out_right</item>
+        <item name="exitAnim">@anim/slide_out_left</item>
+        <item name="enterAnim">@anim/slide_in_right</item>
+    </style>
+
     <style name="AppTheme.NoActionBar.Black">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
