--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#006569</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorWhite">@android:color/white</color>
+    <!--背景色-->
+    <color name="colorCommonGreyBg">#F8F8F8</color>
+    <color name="colorCommonWhiteBg">@color/colorWhite</color>
 
     <color name="gray_divide">#cccccc</color>
     <color name="dialog_hint">#888888</color>
@@ -11,11 +14,28 @@
     <color name="dialog_title">#666666</color>
     <color name="bg_color">#ffffff</color>
 
+    <!--  text color  -->
+    <color name="text_title">#333333</color>
+    <color name="text_content">#454545</color>
+    <!--  input color  -->
+    <color name="color_input_bg">#CCCCCC</color>
+    <color name="color_input_frame">#CCCCCC</color>
+    <color name="color_input_hint">#BBBBBB</color>
+    <!--  button color  -->
+    <color name="button_disabled_bg">#DDDDDD</color>
+    <color name="button_disabled_text">#BBBBBB</color>
+    <color name="button_enable_bg">@color/colorPrimary</color>
+    <color name="button_enable_text">@color/colorWhite</color>
+    <color name="text_label">@color/dialog_cancel</color>
+    <color name="text_black">@color/buttonEnableColor</color>
     <color name="buttonEnableColor">#333333</color>
     <color name="buttonDisabledColor">#F6F6F6</color>
     <color name="colorTransparent">#00FFFFFF</color>
 
-    <color name="text_label">@color/dialog_cancel</color>
-    <color name="text_black">@color/buttonEnableColor</color>
     <color name="color_divide">#e6e6e6</color>
+    <!-- main bg color   -->
+    <color name="main_yellow_color">#ffe6b406</color>
+    <color name="main_blue_color">#02948F</color>
+    <color name="main_red_color">#D6011F</color>
+
 </resources>
