--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data class="ForgetPassDataBinding">
+    <data class="UserInfoDataBinding">
 
         <import type="android.view.View" />
 
@@ -10,7 +10,7 @@
 
         <variable
             name="viewModel"
-            type="com.isuo.inspection.application.ui.user.forget_pass.ForgetPassViewModel" />
+            type="com.isuo.inspection.application.ui.user.user_info.UserInfoViewModel" />
     </data>
 
     <LinearLayout
@@ -43,7 +43,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="旧密码"
+                        android:text="姓名"
                         android:textColor="@color/text_title" />
 
                     <EditText
@@ -54,10 +54,10 @@
                         android:afterTextChanged="@{viewModel.textChange}"
                         android:background="@null"
                         android:gravity="right|center_vertical"
-                        android:hint="请输入旧密码"
-                        android:inputType="textPassword"
-                        android:maxLength="16"
-                        android:text="@={viewModel.oldPass}"
+                        android:hint="请输入姓名"
+                        android:inputType="text"
+                        android:maxLength="6"
+                        android:text="@={viewModel.name}"
                         android:textColor="@color/text_title"
                         android:textColorHint="@color/color_input_hint"
                         android:textSize="15sp" />
@@ -77,7 +77,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="新密码"
+                        android:text="联系方式"
                         android:textColor="@color/text_title"
                         android:textSize="15sp" />
 
@@ -89,10 +89,10 @@
                         android:afterTextChanged="@{viewModel.textChange}"
                         android:background="@null"
                         android:gravity="right|center_vertical"
-                        android:hint="请输入新密码"
-                        android:inputType="textPassword"
-                        android:maxLength="16"
-                        android:text="@={viewModel.newPass}"
+                        android:hint="请输入手机号码"
+                        android:inputType="phone"
+                        android:maxLength="11"
+                        android:text="@={viewModel.phone}"
                         android:textColor="@color/text_title"
                         android:textColorHint="@color/color_input_hint"
                         android:textSize="15sp" />
@@ -102,42 +102,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/color_divide" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="确认密码"
-                        android:textColor="@color/text_title"
-                        android:textSize="15sp" />
-
-                    <EditText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
-                        android:afterTextChanged="@{viewModel.textChange}"
-                        android:background="@null"
-                        android:gravity="right|center_vertical"
-                        android:hint="请再次输入新密码"
-                        android:inputType="textPassword"
-                        android:maxLength="16"
-                        android:text="@={viewModel.newPass1}"
-                        android:textColor="@color/text_title"
-                        android:textColorHint="@color/color_input_hint"
-                        android:textSize="15sp" />
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:background="@color/color_divide" />
-
 
             </LinearLayout>
 
