--- a/app/src/main/res/menu/menu_more.xml
+++ b/app/src/main/res/menu/menu_more.xml
@@ -5,5 +5,6 @@
         android:id="@+id/menu"
         android:orderInCategory="100"
         android:title="@string/more"
+        android:icon="@mipmap/icon_top_user"
         app:showAsAction="always" />
 </menu>
