--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,8 +17,9 @@
     <!--  text color  -->
     <color name="text_title">#333333</color>
     <color name="text_content">#454545</color>
+    <color name="text_yellow">#EAB602</color>
     <!--  input color  -->
-    <color name="color_input_bg">#CCCCCC</color>
+    <color name="color_input_bg">#F4F4F4</color>
     <color name="color_input_frame">#CCCCCC</color>
     <color name="color_input_hint">#BBBBBB</color>
     <!--  button color  -->
