--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,36 +32,52 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="60dp"
-                    android:text="xxx"
-                    android:textColor="@color/text_black"
-                    android:textSize="25sp" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="15dp"
-                    android:text="xxx"
-                    android:textColor="#ff999999"
-                    android:textSize="16sp" />
+                    <ImageView
+                        android:id="@+id/image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:layout_marginTop="85dp"
+                        android:src="@mipmap/login_logo" />
+
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="70dp"
+                        android:src="@mipmap/login_img" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/image"
+                        android:layout_marginLeft="25dp"
+                        android:layout_marginTop="10dp"
+                        android:lineSpacingExtra="6dp"
+                        android:text="国家电网\n陕西省检修公司设备检测管理系统"
+                        android:textColor="@color/text_black"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="25dp"
                     android:layout_marginTop="39dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="25dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/login_phone" />
 
                     <EditText
                         android:layout_width="match_parent"
@@ -81,50 +97,48 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:background="@color/color_divide" />
+                    android:layout_height="1dp"
+                    android:background="@{viewModel.name.length() == 0 ?@color/color_divide:@color/line_select_color}"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="25dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="25dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
-                    <FrameLayout
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/login_password" />
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/et_pass"
                         android:layout_width="0dp"
                         android:layout_height="44dp"
-                        android:layout_marginLeft="12dp"
-                        android:layout_weight="1">
-
-
-                        <androidx.appcompat.widget.AppCompatEditText
-                            android:id="@+id/et_pass"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:afterTextChanged="@{viewModel.textChange}"
-                            android:background="@color/colorWhite"
-                            android:hint="@string/login_hit_use_pass"
-                            android:inputType="textPassword"
-                            android:text="@={viewModel.pass}"
-                            android:textColor="@color/text_black"
-                            android:textColorHint="#FFBBBBBB"
-                            android:textSize="@dimen/sp_14" />
-
-                    </FrameLayout>
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="1"
+                        android:afterTextChanged="@{viewModel.textChange}"
+                        android:background="@color/colorWhite"
+                        android:hint="@string/login_hit_use_pass"
+                        android:inputType="textPassword"
+                        android:text="@={viewModel.pass}"
+                        android:textColor="@color/text_black"
+                        android:textColorHint="#FFBBBBBB"
+                        android:textSize="@dimen/sp_14" />
 
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:background="@color/color_divide" />
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="25dp"
+                    android:background="@{viewModel.pass.length() == 0 ?@color/color_divide:@color/line_select_color}" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -163,7 +177,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
