--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,41 @@
         android:background="@color/colorCommonGreyBg"
         android:orientation="vertical">
 
-        <include layout="@layout/toolbar" />
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            app:elevation="0dp">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary">
+
+
+                <TextView
+                    android:id="@+id/titleId"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="运维"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_marginRight="8dp"
+                    android:onClick="@{()->viewModel.showUserCenter()}"
+                    android:padding="8dp"
+                    android:src="@mipmap/icon_top_user" />
+
+            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.AppBarLayout>
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/refreshLayout"
@@ -160,6 +194,7 @@
                                 android:layout_marginTop="10dp"
                                 android:background="@color/colorWhite"
                                 android:gravity="center_vertical"
+                                android:onClick="@{()->viewModel.showSearchSub()}"
                                 android:orientation="horizontal">
 
                                 <LinearLayout
@@ -175,16 +210,12 @@
                                         android:layout_height="wrap_content"
                                         android:src="@mipmap/icon_search" />
 
-                                    <EditText
+                                    <TextView
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
-                                        android:afterTextChanged="@{viewModel.textChange}"
-                                        android:background="@null"
-                                        android:hint="搜索变电站"
-                                        android:maxLength="20"
-                                        android:text="@={viewModel.searchText}"
-                                        android:textColor="@color/text_black"
-                                        android:textColorHint="@color/color_input_hint"
+                                        android:gravity="center_vertical"
+                                        android:text="搜索变电站"
+                                        android:textColor="@color/color_input_hint"
                                         android:textSize="@dimen/sp_14" />
 
                                 </LinearLayout>
