--- a/app/src/main/res/layout/layout_no_data.xml
+++ b/app/src/main/res/layout/layout_no_data.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/bg_color">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="165dp"
-        android:src="@mipmap/img_null" />
+    <data>
 
-    <TextView
-        android:id="@+id/no_data_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/icon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp"
-        android:text="@string/check_net"
-        android:textColor="#ff999999"
-        android:textSize="14sp" />
+        <variable
+            name="state"
+            type="int" />
 
-</RelativeLayout>
+        <import type="android.view.View" />
+
+        <import type="com.isuo.inspection.application.common.ConstantInt" />
+    </data>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="@{state == ConstantInt.REQUEST_STATE_EMPTY?View.VISIBLE:View.GONE}"
+        android:background="@color/bg_color">
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="165dp"
+            android:src="@mipmap/img_null" />
+
+        <TextView
+            android:id="@+id/no_data_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/icon"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="22dp"
+            android:text="@string/check_net"
+            android:textColor="#ff999999"
+            android:textSize="14sp" />
+
+    </RelativeLayout>
+</layout>
