--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -5,6 +5,8 @@
 
     <data class="InputDataBinding">
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.isuo.inspection.application.ui.main.input.InputViewModel" />
@@ -39,6 +41,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -62,9 +65,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
-                        android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:visibility="@{viewModel.showPositionView?View.VISIBLE:View.GONE}">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -94,8 +97,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginTop="100dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginRight="15dp"
+                    android:layout_marginBottom="25dp"
                     android:onClick="@{()->viewModel.submitData()}"
                     android:text="提交"
                     app:button_common_enable="@{viewModel.canClick}" />
