--- a/app/src/main/res/layout/item_input_type_3.xml
+++ b/app/src/main/res/layout/item_input_type_3.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -8,8 +9,8 @@
         <import type="android.text.InputType" />
 
         <variable
-            name="inputType1"
-            type="com.isuo.inspection.application.model.bean.InputType1" />
+            name="inputType3"
+            type="com.isuo.inspection.application.model.bean.InputType3" />
     </data>
 
     <LinearLayout
@@ -21,6 +22,37 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:drawableLeft="@mipmap/img_rectangle"
+                android:gravity="center_vertical"
+                android:text="测点："
+                android:textColor="@color/text_title"
+                android:textSize="15sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{inputType3.positionText}"
+                android:textColor="@color/text_yellow"
+                android:textSize="15sp"
+                tools:text="xxxx" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/gray_divide" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="44dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -29,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:text="放电峰值"
+                android:text="TEV"
                 android:textColor="@color/text_title"
                 android:textSize="15sp" />
 
@@ -38,13 +70,13 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:afterTextChanged="@{inputType1.textChangeListener}"
+                android:afterTextChanged="@{inputType3.textChangeListener}"
                 android:background="@null"
                 android:gravity="right|center_vertical"
                 android:hint="请输入"
                 android:inputType="numberSigned|numberDecimal"
                 android:paddingRight="15dp"
-                android:text="@={inputType1.value1}"
+                android:text="@={inputType3.value1}"
                 android:textColor="@color/text_content"
                 android:textColorHint="@color/color_input_hint"
                 android:textSize="14sp" />
@@ -66,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:text="背景峰值"
+                android:text="TEV背景值"
                 android:textColor="@color/text_title"
                 android:textSize="15sp" />
 
@@ -75,87 +107,13 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:afterTextChanged="@{inputType1.textChangeListener}"
+                android:afterTextChanged="@{inputType3.textChangeListener}"
                 android:background="@null"
                 android:gravity="right|center_vertical"
                 android:hint="请输入"
                 android:inputType="numberSigned|numberDecimal"
                 android:paddingRight="15dp"
-                android:text="@={inputType1.value2}"
-                android:textColor="@color/text_content"
-                android:textColorHint="@color/color_input_hint"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/gray_divide" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:text="频率成分1"
-                android:textColor="@color/text_title"
-                android:textSize="15sp" />
-
-            <EditText
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:afterTextChanged="@{inputType1.textChangeListener}"
-                android:background="@null"
-                android:gravity="right|center_vertical"
-                android:hint="请输入"
-                android:inputType="numberSigned|numberDecimal"
-                android:paddingRight="15dp"
-                android:text="@={inputType1.value3}"
-                android:textColor="@color/text_content"
-                android:textColorHint="@color/color_input_hint"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/gray_divide" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:text="频率成分2"
-                android:textColor="@color/text_title"
-                android:textSize="15sp" />
-
-            <EditText
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:afterTextChanged="@{inputType1.textChangeListener}"
-                android:background="@null"
-                android:gravity="right|center_vertical"
-                android:hint="请输入"
-                android:inputType="numberSigned|numberDecimal"
-                android:paddingRight="15dp"
-                android:text="@={inputType1.value4}"
+                android:text="@={inputType3.value2}"
                 android:textColor="@color/text_content"
                 android:textColorHint="@color/color_input_hint"
                 android:textSize="14sp" />
