--- a/app/src/main/res/layout/item_input_type_2.xml
+++ b/app/src/main/res/layout/item_input_type_2.xml
@@ -40,6 +40,7 @@
                 android:layout_weight="1"
                 android:afterTextChanged="@{inputType2.textChangeListener}"
                 android:background="@null"
+                android:inputType="numberSigned|numberDecimal"
                 android:gravity="right|center_vertical"
                 android:hint="请输入"
                 android:paddingRight="15dp"
@@ -78,6 +79,7 @@
                 android:background="@null"
                 android:gravity="right|center_vertical"
                 android:hint="请输入"
+                android:inputType="numberSigned|numberDecimal"
                 android:paddingRight="15dp"
                 android:text="@={inputType2.value2}"
                 android:textColor="@color/text_content"
