--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorWhite"
+        android:background="@color/colorCommonGreyBg"
         tools:context=".ui.splash.SplashActivity">
 
         <ImageView
@@ -22,8 +22,24 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginTop="116dp"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_marginTop="160dp"
+            android:src="@mipmap/login_logo" />
+
+        <ImageView
+            android:id="@+id/icon1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="60dp"
+            android:src="@mipmap/login_img_2" />
+
+        <ImageView
+            android:id="@+id/icon2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:src="@mipmap/login_img_1" />
+
 
         <TextView
             android:id="@+id/text_1"
@@ -31,21 +47,20 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/icon"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="18dp"
-            android:text="@string/app_name"
+            android:layout_marginTop="17dp"
+            android:text="陕西省检修公司"
             android:textColor="#ff333333"
-            android:textSize="25sp" />
+            android:textSize="21sp" />
 
         <TextView
-            android:id="@+id/text_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_1"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:text="专业电工急速共享平台，更快，更专业！"
-            android:textColor="#ff888888"
-            android:textSize="14sp" />
+            android:layout_marginTop="5dp"
+            android:text="设备检测管理系统"
+            android:textColor="#ff333333"
+            android:textSize="17sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -57,6 +72,16 @@
             android:textColor="#ff888888"
             android:textSize="13sp"
             android:visibility="gone" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="25dp"
+            android:text="©isuo 2020"
+            android:textColor="#ff454545"
+            android:textSize="12sp" />
 
     </RelativeLayout>
 </layout>
