--- a/app/src/main/res/layout/fragment_history_list.xml
+++ b/app/src/main/res/layout/fragment_history_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data class="HistoryListDataBinding">
 
@@ -30,19 +31,185 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <com.sito.tool.library.widget.PinnedHeaderExpandableListView
-                    android:id="@+id/expandableListView"
+                <androidx.core.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:cacheColorHint="@null"
-                    android:childDivider="@null"
-                    android:childIndicatorLeft="0dp"
-                    android:descendantFocusability="blocksDescendants"
-                    android:divider="@null"
-                    android:dividerHeight="0dp"
-                    android:groupIndicator="@null"
-                    android:listSelector="@color/colorTransparent"
-                    android:scrollbars="none" />
+                    android:layout_height="wrap_content"
+                    android:visibility="@{viewModel.showChooseListView?View.GONE:View.VISIBLE}"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorWhite"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="检测项别："
+                                    android:textColor="@color/text_content"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@{viewModel.checkType}"
+                                    android:textColor="#ffeab602"
+                                    android:textSize="15sp"
+                                    tools:text="开关柜超声波局放检测" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginBottom="10dp"
+                                android:orientation="horizontal"
+                                android:visibility="@{viewModel.showPositionView?View.VISIBLE:View.GONE}">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="测点："
+                                    android:textColor="@color/text_content"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@{viewModel.checkPosition}"
+                                    android:textColor="#ffeab602"
+                                    android:textSize="15sp"
+                                    tools:text="开关柜超声波局放检测" />
+
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <com.sito.tool.library.widget.PinnedHeaderExpandableListView
+                            android:id="@+id/expandableListView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:cacheColorHint="@null"
+                            android:childDivider="@null"
+                            android:childIndicatorLeft="0dp"
+                            android:descendantFocusability="blocksDescendants"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
+                            android:groupIndicator="@null"
+                            android:listSelector="@color/colorTransparent"
+                            android:scrollbars="none" />
+
+                    </LinearLayout>
+
+
+                </androidx.core.widget.NestedScrollView>
+
+                <androidx.core.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="@{viewModel.showChooseListView?View.VISIBLE:View.GONE}"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:descendantFocusability="blocksDescendants"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorWhite"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="检测项别："
+                                    android:textColor="@color/text_content"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@{viewModel.checkType}"
+                                    android:textColor="#ffeab602"
+                                    android:textSize="15sp"
+                                    tools:text="开关柜超声波局放检测" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginBottom="10dp"
+                                android:orientation="horizontal"
+                                android:visibility="@{viewModel.showPositionView?View.VISIBLE:View.GONE}">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="测点："
+                                    android:textColor="@color/text_content"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@{viewModel.checkPosition}"
+                                    android:textColor="#ffeab602"
+                                    android:textSize="15sp"
+                                    tools:text="开关柜超声波局放检测" />
+
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="35dp"
+                            android:layout_marginLeft="15dp"
+                            android:gravity="center_vertical"
+                            android:text="@{viewModel.showChooseDate}"
+                            android:textColor="@color/text_title"
+                            android:textSize="14sp" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </LinearLayout>
+
+
+                </androidx.core.widget.NestedScrollView>
+
             </RelativeLayout>
 
 
