--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <item name="enterAnim">@anim/slide_in_right</item>
     </style>
 
-    <style name="AppTheme.NoActionBar.White">
+    <style name="AppTheme.NoActionBar.Gray">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="colorPrimaryDark">@color/colorCommonGreyBg</item>
@@ -24,6 +24,17 @@
         <item name="exitAnim">@anim/slide_out_left</item>
         <item name="enterAnim">@anim/slide_in_right</item>
     </style>
+
+    <style name="AppTheme.NoActionBar.White">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimaryDark">@color/colorWhite</item>
+        <item name="popEnterAnim">@anim/slide_in_left</item>
+        <item name="popExitAnim">@anim/slide_out_right</item>
+        <item name="exitAnim">@anim/slide_out_left</item>
+        <item name="enterAnim">@anim/slide_in_right</item>
+    </style>
+
 
     <style name="AppTheme.NoActionBar.Black">
         <item name="windowActionBar">false</item>
