--- a/app/src/main/res/layout/activity_device_list.xml
+++ b/app/src/main/res/layout/activity_device_list.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data class="DeviceListDataBinding">
 
@@ -67,12 +69,26 @@
             android:layout_height="match_parent"
             android:background="@color/colorCommonGreyBg">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+            <com.scwang.smartrefresh.layout.SmartRefreshLayout
+                android:id="@+id/refreshLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="none" />
-            <!--            <include layout="@layout/layout_request_state" />-->
+                app:srlAccentColor="@color/colorPrimary"
+                app:srlEnablePreviewInEditMode="true">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none" />
+
+            </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
+            <include
+                android:id="@+id/request_state"
+                layout="@layout/layout_request_state"
+                bind:state="@{viewModel.requestState}" />
+
 
         </RelativeLayout>
     </LinearLayout>
